Make sure it's not inline so the word doesn't break in the LI

--- a/wsuheader/foundation/v5/scss/wsuheader.scss
+++ b/wsuheader/foundation/v5/scss/wsuheader.scss
@@ -82,7 +82,7 @@
       }
 
       li {
-        display: inline;
+        display: inline-block;
       }
     }
 
